--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -49,7 +49,7 @@
                       d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
                   </svg>
 
-                  <div class="card text-white bg-secondary mb-1" style="width: 25rem;"
+                  <div class="card shadow mb-1" style="width: 25rem;"
                     *ngFor="let car of cars | filterPipeCar:filterText |filterPipeCarColor:colorFilter">
                     <div class="py-2 text-center">
 
@@ -91,10 +91,10 @@
     <body *ngIf="currentCar">
       <div class="row mb-2">
         <div class="col col-4">
-          <img src={{imagePath}} width="280" height="150" alt="{{carinfo}}">
+          <img src={{imagePath}} width="450" height="260" alt="{{carinfo}}">
           <dl>
-            <dt>{{currentCar.brandName}} "properties"
-            <dd> {{currentCar.brandName}} {{currentCar.colorName}} {{currentCar.modelYear}} {{currentCar.description}}
+            <dt>{{currentCar.brandName}} {{currentCar.carName}}" properties"
+            <dd> {{currentCar.brandName}} {{currentCar.carName}} {{currentCar.colorName}} {{currentCar.modelYear}} {{currentCar.description}}
               {{currentCar.manifacturer}} product by {{currentCar.production}} assembly: {{currentCar.assembly}}
               design by {{currentCar.designer}} {{currentCar.class}} {{currentCar.bodyStyle}} engine:
               {{currentCar.engine}}
