--- a/src/app/components/member-ship/member-ship.component.html
+++ b/src/app/components/member-ship/member-ship.component.html
@@ -178,8 +178,8 @@
                             </div>
                             <div class="col-sm-2">
                                 <label for="findeksPoint" class="form-label">Findex Point : </label>
-                                <input type="" class="form-control" id="findeksPoint" [(ngModel)]="puan" placeholder=""
-                                    [value]="puan" formControlName="findeksPoint" required>
+                                <input type="number" class="form-control" id="findeksPoint" [(ngModel)]="puan" placeholder=""
+                                    [value]="puan" formControlName="findeksPoint" required >
                                 <div class="invalid-feedback">
                                     Valid last name is required.
                                 </div>
