--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -2,77 +2,71 @@
 
   <div class="container">
     <main>
-      <div class="py-5 text-center">
+      <div class="text-center">
         <h1>USER REGISTER</h1>
       </div>
 
       <div class="row g-3">
 
-        <div class="col-md-7 col-lg-8">
-          <form [formGroup]="userModel" class="needs-validation" novalidate>
-            <div class="row g-3">
-              <div class="col-sm-6">
-                <label for="firstName" class="form-label">First name</label>
-                <input type="text" class="form-control" id="firstName" 
-                  formControlName="firstName" 
-                  placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid first name is required.
-                </div>
+        <form [formGroup]="userModel" class="needs-validation" novalidate>
+          <div class="row g-3">
+            <div class="col-sm-6">
+              <label for="firstName" class="form-label">First name</label>
+              <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="" value=""
+                required>
+              <div class="invalid-feedback">
+                Valid first name is required.
               </div>
-
-              <div class="col-sm-6">
-                <label for="lastName" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="lastName" 
-                formControlName="lastName"
-                placeholder="" value="" required>
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
-              </div>
-              
-              <div class="col-12">
-                <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                <input type="email" class="form-control" id="email" 
-                  formControlName="email"
-                  placeholder="you@example.com">
-                <div class="invalid-feedback">
-                  Please enter a valid email address for shipping updates.
-                </div>
-              </div>
-
-              <div class="col-sm-6">
-                <label for="password" class="form-label">password</label>
-                <input type="password" class="form-control" id="password" 
-                    placeholder="" value="" required
-                    formControlName="password">
-
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
-              </div>
-             
-              <div class="col-md-5">
-                <label for="country" class="form-label">Yetkilendirme</label>
-                <select class="form-select" id="country" required>
-                  <option value="">Choose...</option>
-                  <option>United States</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please select a valid country.
-                </div>
-              </div>
-
-           
-
-              
             </div>
 
-            <hr class="my-4">
+            <div class="col-sm-6">
+              <label for="lastName" class="form-label">Last name</label>
+              <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="" value=""
+                required>
+              <div class="invalid-feedback">
+                Valid last name is required.
+              </div>
+            </div>
 
-            <button (click)="registerUser()" class="w-100 btn btn-primary btn-lg" type="submit">register</button>
-          </form>
-        </div>
+            <div class="col-12">
+              <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
+              <input type="email" class="form-control" id="email" formControlName="email" placeholder="you@example.com">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <label for="password" class="form-label">password</label>
+              <input type="password" class="form-control" id="password" placeholder="" value="" required
+                formControlName="password">
+
+              <div class="invalid-feedback">
+                Valid last name is required.
+              </div>
+            </div>
+
+            <div class="col-md-5">
+              <label for="country" class="form-label">Yetkilendirme</label>
+              <select class="form-select" id="country" required>
+                <option value="">Choose...</option>
+                <option>User</option>
+                <option>Admin</option>
+                <option>Administrator</option>
+                <option>guest</option>
+                <option>Head</option>
+                <option>Worm</option>
+              </select>
+              <div class="invalid-feedback">
+                Please select a valid country.
+              </div>
+            </div>
+          </div>
+
+          <hr class="my-4">
+
+          <button (click)="registerUser()" class="w-100 btn btn-primary btn-lg" type="submit">register</button>
+        </form>
       </div>
     </main>
 
