--- a/src/app/components/brand-add-upd-del/brand-add-upd-del.component.html
+++ b/src/app/components/brand-add-upd-del/brand-add-upd-del.component.html
@@ -1,22 +1,25 @@
-<div class="content">
-    <div class="row">
-        <div class="col-md-12">
+<div class="container">
+    
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
 
-            <div class="card">
-                <div class="card-header">
-                    <h5 clas="title">Add new brand</h5>
-                </div>
-                <div class="card-body">
-                    <form [formGroup]="brandAddForm">
-                        <div class="mb-2">
-                            <div class="form-group">
-                                <input type="text" id="brandName" formControlName="brandName" size="27"
-                                    placeholder="Brand name" />
+                <div class="card">
+                    <div class="card-header">
+                        <h5 clas="title">Add new brand</h5>
+                    </div>
+                    <div class="card-body">
+                        <form [formGroup]="brandAddForm">
+                            <div class="mb-2">
+                                <div class="form-group">
+                                    <input type="text" id="brandName" formControlName="brandName" size="27"
+                                        placeholder="Brand name" />
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
+                    <button class="btn btn-outline-primary" (click)="add()"> Add </button>
                 </div>
-                <button class="btn btn-outline-primary" (click)="add()"> Add </button>
             </div>
         </div>
     </div>
