--- a/src/app/components/car-rental/car-rental.component.css
+++ b/src/app/components/car-rental/car-rental.component.css
@@ -37,7 +37,8 @@
   
   }
   .hover-overlay-container:hover .overlay-image {
-  opacity: 0.3;
+  opacity: 0.7;
+  transform: scale(1.05);
   }
   .hover-overlay-container:hover .overlay-btn-container {
   opacity: 1;
@@ -47,7 +48,7 @@
   width: 100%;
   height: 100%;
   opacity: 1;
-  transition: .5s ease;
+  transition: .7s ease;
   backface-visibility: hidden;
   }
   .hover-overlay-container .overlay-btn-container {
