--- a/src/app/components/car-rental/car-rental.component.html
+++ b/src/app/components/car-rental/car-rental.component.html
@@ -1,95 +1,186 @@
+<div class="row mb-2">
+  <div class="col col-4">
+    <div class="container">
+      <div class="hover-overlay-container">
+        <a class="navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" routerLink="/cars"
+            fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+            <path
+              d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
+          </svg>Return car list</a>
 
-<div class="row gy-3">
-  <Form  action="" [formGroup]="rentPayment">
-    <h5 *ngIf="transactionAmount">total : {{transactionAmount |currency:"₺"}}</h5>
-    <div class="row gy-3">
-      <div class="col-md-6">
-        <label for="cc-name" class="form-label">Starting Date</label>
-        <input type="date"  class="form-control" id="cc-name" 
-            placeholder="xx.xx.xx" 
-            formControlName="rentDate"  required>
-        <small class="text-muted">Full name as displayed on card</small>
-        <div class="invalid-feedback">
-            Name on card is required
-        </div>
+        <img class="overlay-image" src={{currentCar.carImage}} width="400" height="260" alt="">
+
+        <dl>
+          <dt>{{currentCar.brandName}} {{currentCar.carName}}" properties"
+          <dd><small> {{currentCar.brandName}} {{currentCar.carName}} {{currentCar.colorName}} {{currentCar.modelYear}}
+              {{currentCar.description}} {{currentCar.manifacturer}} product by {{currentCar.production}}
+              assembly: {{currentCar.assembly}} design by {{currentCar.designer}} {{currentCar.class}}
+              {{currentCar.bodyStyle}}
+              engine: {{currentCar.engine}} {{currentCar.powerOut}} transmission: {{currentCar.transmission}}</small>
+        </dl>
+      </div>
     </div>
+  </div>
 
-    <div class="col-md-6">
-        <label for="cc-number" class="form-label">Due Date</label>
-        <input formControlName="returnDate" type="date" class="form-control" id="cc-number"
-            placeholder=""  required>
-        <div class="invalid-feedback">
-            Credit card number is required
+  <div class="col col-1">
+
+  </div>
+  <div class="col col-7">
+
+    <div *ngIf="dataLoaded==false" class="container">
+      <div class="row gy-3">
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                Lütfen Dikkat
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>Değerli üyemiz</strong> Formu doldururken takvimden başlangıç tarihi için bugünden önceki
+                günleri seçmeyiniz
+                Dönüş tarihiniz başlangıç tarihinden en az iki gün ileri olmalıdır.
+                Kiralama işleminiz başarı ile gerçekleşirse işlem bittikten sonra kart bilgilerinizi kaydetmeniz ile
+                ilgili sorgu ekranı gelecektir.
+                Kayıt yaptırırsanız daha sonraki işlemleriniz de zamandan kazanırsınız.
+              </div>
+            </div>
+          </div>
         </div>
-    </div>  
-  
-      <div class="col-md-6">
-            <label for="cc-name" class="form-label">Name on card</label>
-            <input type="text"  class="form-control" id="cc-name" placeholder="" required>
-            <small class="text-muted">Full name as displayed on card</small>
-            <div class="invalid-feedback">
+        <Form action="" [formGroup]="rentPayment">
+          <h5 *ngIf="transactionAmount">total : {{transactionAmount |currency:"₺"}}</h5>
+          <div class="row gy-3">
+            <div class="col-md-6">
+              <label for="cc-name" class="form-label">Starting Date</label>
+              <input type="date" class="form-control" id="cc-name" placeholder="xx.xx.xx" formControlName="rentDate"
+                required>
+              <small class="text-muted">Full name as displayed on card</small>
+              <div class="invalid-feedback">
                 Name on card is required
+              </div>
             </div>
-        </div>
-      
-        <div class="col-md-6">
-            <label for="cc-number" class="form-label">Credit card number</label>
-            <input formControlName="creditCard" type="text" class="form-control" id="cc-number"
-                placeholder=""  required>
-            <div class="invalid-feedback">
+
+            <div class="col-md-6">
+              <label for="cc-number" class="form-label">Due Date</label>
+              <input formControlName="returnDate" type="date" class="form-control" id="cc-number" placeholder=""
+                required>
+              <div class="invalid-feedback">
                 Credit card number is required
+              </div>
             </div>
-        </div>
 
-        <div class="col-md-3">
-            <label for="cc-expiration" class="form-label">Expiration</label>
-            <input type="date" class="form-control" id="cc-expiration" placeholder="" required>
-            <div class="invalid-feedback">
+            <div class="col-md-6">
+              <label for="cc-name" class="form-label">Name on card</label>
+              <input type="text" class="form-control" id="cc-name" placeholder="" required>
+              <small class="text-muted">Full name as displayed on card</small>
+              <div class="invalid-feedback">
+                Name on card is required
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <label for="cc-number" class="form-label">Credit card number</label>
+              <input formControlName="creditCard" type="text" class="form-control" id="cc-number" placeholder=""
+                required>
+              <div class="invalid-feedback">
+                Credit card number is required
+              </div>
+            </div>
+
+            <div class="col-md-3">
+              <label for="cc-expiration" class="form-label">Expiration</label>
+              <input type="date" class="form-control" id="cc-expiration" placeholder="" required>
+              <div class="invalid-feedback">
                 Expiration date required
+              </div>
             </div>
-        </div>
 
-        <div class="col-md-3">
-            <label for="cc-cvv" class="form-label">CVV</label>
-            <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-            <div class="invalid-feedback">
+            <div class="col-md-3">
+              <label for="cc-cvv" class="form-label">CVV</label>
+              <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+              <div class="invalid-feedback">
                 Security code required
+              </div>
             </div>
-        </div>
 
-        <div *ngIf="paying==false" class="col col-3">
-          <hr class="my-3">
-          <div class="btn-group" role="group" aria-label="Basic example">
-            <button  (click)="nextStep()" type="w-100 btn btn-primary btn-lg" class="btn btn-primary"> NEXT STEP </button>
+            <div *ngIf="paying==false" class="col col-3">
+              <hr class="my-3">
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button (click)="nextStep()" type="w-100 btn btn-primary btn-lg" class="btn btn-primary"> NEXT STEP
+                </button>
+              </div>
+            </div>
+            <div *ngIf="paying==true" class="col col-3">
+              <hr class="my-3">
+              <div class="btn-group" role="group" aria-label="Basic example">
+                <button (click)="PayAndExit()" type="w-100 btn btn-primary btn-lg" class="btn btn-primary"> Pay and
+                  Finished </button>
+              </div>
+            </div>
+            <div class="col col-3">
+              <h5 class="mb-3">Payment</h5>
+              <div class="form-check">
+                <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
+                <label class="form-check-label" for="credit">Credit card</label>
+              </div>
+              <div class="form-check">
+                <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
+                <label class="form-check-label" for="debit">Debit card</label>
+              </div>
+              <div class="form-check">
+                <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
+                <label class="form-check-label" for="paypal">PayPal</label>
+              </div>
+            </div>
+
           </div>
-        </div>
-        <div *ngIf="paying==true" class="col col-3">
-          <hr class="my-3">
-          <div class="btn-group" role="group" aria-label="Basic example">
-            <button  (click)="PayAndExit()" type="w-100 btn btn-primary btn-lg" class="btn btn-primary"> Pay and Finished </button>
-          </div>
-        </div>
-        <div class="col col-3">
-          <h5 class="mb-3">Payment</h5>
-          <div class="form-check">
-            <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-            <label class="form-check-label" for="credit">Credit card</label>
-          </div>
-          <div class="form-check">
-            <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-            <label class="form-check-label" for="debit">Debit card</label>
-          </div>
-          <div class="form-check">
-            <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-            <label class="form-check-label" for="paypal">PayPal</label>
-          </div>
-        </div>
-        
+        </Form>
+      </div>
     </div>
-  </Form>
-</div>
 
 
+    <div *ngIf="dataLoaded==true" class="container">
+      <div class="row">
+        <div class="col col-6">
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                   data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Lütfen Dikkat
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>
+                    <h4>Kayıt İşlemi</h4>
+                  </strong> Kredi kart bilgileriniz kaydetmemizi ister misiniz?
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <div class="row">
+          <div class="col col-3">
+            <hr class="my-3">
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button (click)="PayAndExit()" type="w-100 btn btn-primary btn-lg" class="btn btn-primary"> Pay and
+                Finished </button>
+            </div>
+          </div>
+          <div class="col col-3">
+            <hr class="my-3">
+            <div class="btn-group" role="group" aria-label="Basic example">
+              <button (click)="PayAndExit()" type="w-100 btn btn-primary btn-lg" class="btn btn-primary"> Pay and
+                Finished </button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-
+    </div>
