--- a/src/app/components/color-add-upd-del/color-add-upd-del.component.html
+++ b/src/app/components/color-add-upd-del/color-add-upd-del.component.html
@@ -1,7 +1,6 @@
-<div class="content">
+<div class="container">
     <div class="row">
         <div class="col-md-12">
-
             <div class="card">
                 <div class="card-header">
                     <h5 clas="title">Add new Color</h5>
@@ -16,12 +15,7 @@
                         </div>
                     </form>
                 </div>
-
-
-
                 <button class="btn btn-outline-primary" (click)="add()"> Add </button>
-              
-
             </div>
         </div>
     </div>
