--- a/src/app/components/navi/navi.component.css
+++ b/src/app/components/navi/navi.component.css
@@ -1,3 +1,11 @@
+.nav-link dropdown-toggle{
+  background-color: rgb(255, 196, 0)!important;
+}
+
+.container-fluid{
+  background-color: rgb(255, 196, 0)!important;
+}
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -12,10 +20,7 @@
     }
   }
   
-  td{
-    background-color: rgb(250, 250, 250);
-  }
-
+ 
   
   .hover-overlay-container {
   position: relative;
@@ -23,6 +28,7 @@
   }
   .hover-overlay-container:hover .overlay-image {
   opacity: 0.6;
+  transform: scale(1.25)
   }
   .hover-overlay-container:hover .overlay-btn-container {
   opacity: 1;
@@ -52,26 +58,5 @@
   text-decoration: none;
   }
   
-  form {
-    font: 1em sans-serif;
-    max-width: 1220px;
-  }
-  
-  p > label {
-    display: block;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="number"],
-  textarea,
-  fieldset {
-    width : 100%;
-    border: 1px solid #333;
-    box-sizing: border-box;
-  }
-  
-  input:invalid {
-    box-shadow: 0 0 5px 1px rgb(195, 0, 255);
-    text-underline-position:auto rgb(92, 16, 16);
-  }
+ 
+ 
