--- a/src/app/components/member-ship/member-ship.component.html
+++ b/src/app/components/member-ship/member-ship.component.html
@@ -2,6 +2,10 @@
     <div class="text-center">
         <h3 *ngIf="logout==true">REGISTER</h3>
     </div>
+    <div class="text-center">
+        <h3 *ngIf="logout==false">MEMBERSHIP INFO</h3>
+    </div>
+
 
     <!-- findeks modal runnig -->
     <div>
@@ -108,17 +112,11 @@
         <div class="container">
             <div class="row g">
                 <div class="col-md-12 col-lg-12">
-                    <form [formGroup]="memberShip" class="needs-validation" novalidate>
-                        <!-- PAYMENT -->
-                        <body>
-                            <h4 class="mb-3">Payment</h4>
-                            <div class="row gy-3">
-                              
-                            </div>
-                        </body>
+                    <Form action="" [formGroup]="memberShip">
+
                         <hr class="my-4">
                         <div class="row g-4">
-                            <div class="col-sm-4">
+                            <div class="col-md-4">
                                 <label for="firstName" class="form-label">First name</label>
                                 <input type="text" class="form-control" id="firstName" formControlName="firstName"
                                     [(ngModel)]="customer.firstName" placeholder="" value="" required>
@@ -126,7 +124,7 @@
                                     Valid first name is required.
                                 </div>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-md-4">
                                 <label for="lastName" class="form-label">Last name</label>
                                 <input type="text" class="form-control" id="lastName" formControlName="lastName"
                                     [(ngModel)]="customer.lastName" placeholder="" value="" required>
@@ -164,7 +162,39 @@
                                 </div>
                             </div>
 
-
+                            <div class="col-md-3">
+                                <label for="cc-name" class="form-label">Name on card</label>
+                                <input type="text" class="form-control" id="cc-name" placeholder="" required>
+                                <small class="text-muted">Full name as displayed on card</small>
+                                <div class="invalid-feedback">
+                                    Name on card is required
+                                </div>
+                            </div>
+            
+                            <div class="col-md-5">
+                                <label for="cc-number" class="form-label">Credit card number</label>
+                                <input formControlName="creditCard" type="text" class="form-control" id="cc-number" placeholder=""
+                                    required>
+                                <div class="invalid-feedback">
+                                    Credit card number is required
+                                </div>
+                            </div>
+            
+                            <div class="col-md-2">
+                                <label for="cc-expiration" class="form-label">Expiration</label>
+                                <input type="date" class="form-control" id="cc-expiration" placeholder="" required>
+                                <div class="invalid-feedback">
+                                    Expiration date required
+                                </div>
+                            </div>
+            
+                            <div class="col-md-2">
+                                <label for="cc-cvv" class="form-label">CVV</label>
+                                <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                                <div class="invalid-feedback">
+                                    Security code required
+                                </div>
+                            </div>
                             <div class="col-sm-10">
                                 <div class="col-md- col-lg-10">
                                     <div (click)="showCalculating()" class="btn btn-secondary">
@@ -178,8 +208,8 @@
                             </div>
                             <div class="col-sm-2">
                                 <label for="findeksPoint" class="form-label">Findex Point : </label>
-                                <input type="number" class="form-control" id="findeksPoint" [(ngModel)]="puan" placeholder=""
-                                    [value]="puan" formControlName="findeksPoint" required >
+                                <input type="number" class="form-control" id="findeksPoint" [(ngModel)]="puan"
+                                    placeholder="" [value]="puan" formControlName="findeksPoint" required>
                                 <div class="invalid-feedback">
                                     Valid last name is required.
                                 </div>
@@ -201,20 +231,37 @@
                             <hr class="my-4">
                         </div>
 
+                        <button *ngIf="logout==false" (click)="onDialog()" class="w-100 btn btn-primary btn-lg"
+                            type="w-100 btn btn-primary btn-lg">Update this one
+                        </button>
 
+                        <hr class="my-2">
 
-                    </form>
+                        <button (click)="addMemberShip()" class="w-100 btn btn-primary btn-lg"
+                            type="w-100 btn btn-primary btn-lg">Save new one
+                        </button>
+
+                    </Form>
                 </div>
             </div>
         </div>
 
 
 
-        <button *ngIf="logout==false" (click)="onDialog()" class="w-100 btn btn-primary btn-lg" type="submit">Update
-            this one</button>
-        <hr class="my-2">
-        <button (click)="addMemberShip()" class="w-100 btn btn-primary btn-lg">Save new one </button>
 
+
+        <Form action="">
+
+            <div class="row gy-3">
+               
+              
+
+                <div class="col col-3">
+
+
+                </div>
+            </div>
+        </Form>
 
         <footer class="my-5 pt-5 text-muted text-center text-small">
             <p class="mb-1">&copy; 2020–2021 Hakan Rent A Car</p>
