--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -10,15 +10,15 @@
 
       <!-- filters of brand and color -->
       <div class="row mb-1">
-        <div class="col col-6">
-
+        <div class="col col-5">
           <small class="text-muted">filter</small>
           <input type="text " [(ngModel)]="filterText" class="form-control" id="filterText"
             placeholder="please type name of car for your seeking">
+          <div class="mb-1" *ngIf="filterText">aranan: {{filterText}}
+          </div>
+
         </div>
 
-        <div class="mb-1" *ngIf="filterText">aranan: {{filterText}}
-        </div>
         <div class="col col-3">
           <small class="text-muted">car name filter</small>
           <select [(ngModel)]="filterText" class="form-select" aria-label="Default select example">
@@ -36,58 +36,56 @@
           </select>
 
         </div>
+        <!-- cars -->
+        <div class="container">
+            <div class="row ">
+              <div class="col-md-7 col-lg-12">
+                <form class="needs-validation" novalidate>
+                  <div class="row g-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd"
+                        d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
+                    </svg>
 
-<div class="container">
-        <div class="col col-12">
-          <div class="row ">
-            <div class="col-md-7 col-lg-12">
-              <form class="needs-validation" novalidate>
-                <div class="row g-2">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                    class="bi bi-arrow-down-up" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                      d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5zm-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5z" />
-                  </svg>
+                    <div class="card shadow mb-1" style="width: 25rem;"
+                      *ngFor="let car of cars | filterPipeCar:filterText |filterPipeCarColor:colorFilter">
+                      <div class="py-2 text-center">
 
-                  <div class="card shadow mb-1" style="width: 25rem;"
-                    *ngFor="let car of cars | filterPipeCar:filterText |filterPipeCarColor:colorFilter">
-                    <div class="py-2 text-center">
+                        <div class="hover-overlay-container">
 
-                      <div class="hover-overlay-container">
-
-                        <img class="overlay-image" src="{{car.carImage}}">
-                        <div class="overlay-btn-container">
-                          <button (click)="checkCarFreeOrNot(car)" class="w-100 btn btn-primary btn-lg">Rent</button>
+                          <img class="overlay-image" src="{{car.carImage}}">
+                          <div class="overlay-btn-container">
+                            <button (click)="checkCarFreeOrNot(car)" class="w-100 btn btn-primary btn-lg">Rent</button>
+                          </div>
                         </div>
                       </div>
+                      <div class="card-body">
+                        <h5 class="card-title">{{car.brandName}}</h5>
+                        <p class="card-text">{{car.carName}}</p>
+                        <ul lass="list group">
+                          <li class="list-group item">
+                            <h5>car findeks: {{car.dailyPrice}}</h5>
+                          </li>
+                          <p class="card-text">{{car.colorName}}</p>
+                          <p class="card-text">{{car.modelYear}}</p>
+                          <p class="card-text">{{car.dailyPrice | currency : "₺"}}</p>
+                          <p class="card-text">{{car.description}}</p>
+                          <p class="card-text">{{car.modelYear}}</p>
+                        </ul>
+                      </div>
+                      <a (click)="checkCarFreeOrNot(car)" class="btn btn-primary">Rental</a>
+
                     </div>
-                    <div class="card-body">
-                      <h5 class="card-title">{{car.brandName}}</h5>
-                      <p class="card-text">{{car.carName}}</p>
-                      <ul lass="list group">
-                        <li class="list-group item"><h5>car findeks: {{car.dailyPrice}}</h5></li>
-                        <p class="card-text">{{car.colorName}}</p>
-                        <p class="card-text">{{car.modelYear}}</p>
-                        <p class="card-text">{{car.dailyPrice | currency : "₺"}}</p>
-                        <p class="card-text">{{car.description}}</p>
-                        <p class="card-text">{{car.modelYear}}</p>
-                      </ul>
-                    </div>
-                    <a (click)="checkCarFreeOrNot(car)" class="btn btn-primary">Rental</a>
-                    
+
                   </div>
-                  
-                </div>
-              </form>
+                </form>
+              </div>
             </div>
-          </div>
+          
         </div>
       </div>
-      </div>
     </body>
-  
+    <app-registration-form>
+    </app-registration-form>
     <hr class="my-5">
-
-
-   
-     
