son hali refacta devam

--- a/src/app/components/car-rental/car-rental.component.html
+++ b/src/app/components/car-rental/car-rental.component.html
@@ -55,7 +55,7 @@
           <div class="row gy-3">
             <div class="col-md-6">
               <label for="cc-name" class="form-label">Starting Date</label>
-              <input type="date" class="form-control" id="cc-name" placeholder="" formControlName="rentDate"
+              <input type="date" class="form-control" id="cc-name" placeholder="" formControlName="rentDate" 
                 required>
               <small class="text-muted">Full name as displayed on card</small>
               <div class="invalid-feedback">
@@ -83,10 +83,10 @@
 
             <div class="col-md-6">
               <label for="cc-number" class="form-label">Credit card number</label>
-              <input formControlName="creditCard" type="text" class="form-control" id="cc-number" placeholder=""
+              <input formControlName="creditCard" type="text"   class="form-control" id="cc-number" placeholder=""
                 required>
               <div class="invalid-feedback">
-                Credit card number is required
+               {{paying}}
               </div>
             </div>
 
@@ -102,7 +102,7 @@
               <label for="cc-cvv" class="form-label">CVV</label>
               <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
               <div class="invalid-feedback">
-                Security code required
+                verhele vır vır zırzır
               </div>
             </div>
 
