--- a/src/app/components/car-rental/car-rental.component.html
+++ b/src/app/components/car-rental/car-rental.component.html
@@ -57,7 +57,7 @@
               <label for="cc-name" class="form-label">Starting Date</label>
               <input type="date" class="form-control" id="cc-name" placeholder="" formControlName="rentDate" 
                 required>
-              <small class="text-muted">Full name as displayed on card</small>
+              <small class="text-muted">{{hatalar}}</small>
               <div class="invalid-feedback">
                 Name on card is required
               </div>
@@ -75,7 +75,7 @@
             <div class="col-md-6">
               <label for="cc-name" class="form-label">Name on card</label>
               <input type="text" class="form-control" id="cc-name" placeholder="" required>
-              <small class="text-muted">Full name as displayed on card</small>
+              <small class="text-muted"></small>
               <div class="invalid-feedback">
                 Name on card is required
               </div>
@@ -180,5 +180,6 @@
           </div>
         </div>
       </div>
+     
 
     </div>
